fixed truncation issue on small screens

--- a/src/styles/Filtering.css
+++ b/src/styles/Filtering.css
@@ -1,5 +1,5 @@
 .Filtering-container{
-    margin-left: 10px;
+    padding: 10px;
     text-align: left;
 }
 
